--- a/index.html
+++ b/index.html
@@ -360,16 +360,16 @@
 
             </div>
             <div class="col-5">
-                <h4 class="font-bold text-[1.3125rem] mb-8">Company</h4>
-                <li class="list-none text-[#5E6282] font-medium"><a href="">About</a></li>
-                <li class="list-none text-[#5E6282] font-medium"><a href="">Careers</a></li>
-                <li class="list-none text-[#5E6282] font-medium"><a href="">Mobile</a></li>
+                <h4 class="font-bold text-[1.3125rem] mb-8">Contact</h4>
+                <li class="list-none text-[#5E6282] font-medium"><a href="">Help/FAQ</a></li>
+                <li class="list-none text-[#5E6282] font-medium"><a href="">Press</a></li>
+                <li class="list-none text-[#5E6282] font-medium"><a href="">Affilates</a></li>
             </div>
             <div class="col-5">
-                <h4 class="font-bold text-[1.3125rem] mb-8">Company</h4>
-                <li class="list-none text-[#5E6282] font-medium"><a href="">About</a></li>
-                <li class="list-none text-[#5E6282] font-medium"><a href="">Careers</a></li>
-                <li class="list-none text-[#5E6282] font-medium"><a href="">Mobile</a></li>
+                <h4 class="font-bold text-[1.3125rem] mb-8">More</h4>
+                <li class="list-none text-[#5E6282] font-medium"><a href="">Airlinefees</a></li>
+                <li class="list-none text-[#5E6282] font-medium"><a href="">Airline</a></li>
+                <li class="list-none text-[#5E6282] font-medium"><a href="">Low fare tips</a></li>
             </div>
             <div class="col-5">
                 <div class="social flex items-center">
@@ -378,7 +378,7 @@
                         <img src="images/Facebook Icon.png" alt="">
                     </div>
 
-                    <div class="relative">
+                    <div class="relative cursor-pointer">
                         <img src="images/Background.png" alt="">
                         <img src="images/instagram 1.png" alt="" class="absolute left-[37%] top-[32%]">
                     </div>
