--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
 </head>
 
 <body>
-    <img src="images/Ellipse 8.png" alt="" class="absolute left-0 top-0 -z-[1]">
-    <div class="relative ">
-
-        <img src="images/Decore.png" alt=""
-            class="absolute max-w-[766px] h-full min-h-[872px] max-h-[872px] right-0 top-[-110px] -z-[1] ">
-    </div>
-    <div class="navbar max-w-7xl m-auto flex justify-between py-12 items-center">
-        <div class="logo animate-bounce">
+    <img src="images/Ellipse 8.png" alt="" class="absolute left-0 top-0 -z-[1] hidden md:block">
+    <img src="images/Decore.png" alt=""
+        class="absolute max-w-[766px] h-full min-h-[872px] max-h-[872px] right-0 top-[-110px] -z-[1] hidden md:block lg:block">
+    <div
+        class="navbar flex flex-col pt-10  justify-center items-center md:flex-row md:max-w-7xl md:m-auto  md:justify-between md:py-12">
+        <div class="logo animate-bounce mb-4">
             <a href=""><img src="images/Logo.png" alt=""></a>
         </div>
-        <div class="menu space-x-10 font-sans font-medium text-[1.0625]">
+        <div class="menu text-center space-x-10 font-sans font-medium text-sm md:text-[1.0625rem]">
             <a href="">Desitnations</a>
             <a href="">Hotels</a>
             <a href="">Flights</a>
@@ -56,29 +54,29 @@
 
     <!-- banner area    -->
 
-    <div class="banner max-w-7xl m-auto flex justify-between py-12 items-center">
-        <div class="banner-left">
-            <p class="text-[#DF6951] text-xl font-bold uppercase mb-6">Best Destinations around the world </p>
+    <div class="banner flex flex-col-reverse py-12 items-center justify-center md:max-w-7xl md:m-auto md:justify-between md:flex-row ">
+        <div class="banner-left text-center p-3 md:text-left">
+            <p class="text-[#DF6951] uppercase font-bold text-xs md:text-xl  md:mb-6">Best Destinations around the world </p>
             <h1
-                class="text-[5.25rem] -tracking-[-4%] font-bold max-w-[595px] text-[#181E4B] leading-[5.5625rem] mb-8 relative">
+                class="relative text-2xl -tracking-[-4%] text-[#181E4B] leading-[5.5625rem] md:mb-8 font-bold md:text-[5.25rem]  md:max-w-[595px] ">
                 Travel, enjoy and live a new and full life <img src="images/Decore-text.png" alt=""
-                    class="absolute top-[4.3125rem] -z-[1] right-[-5rem]">
+                    class="absolute w-28 top-14 right-40 md:w-96 md:top-[4.3125rem] -z-[1] md:right-[-5rem]">
             </h1>
             <p class="text-[#5E6282] ">Built Wicket longer admire do barton vanity itself do in it. Preferred to
                 sportsmen it engrossed
                 listening. Park gate sell they west hard for the.
             </p>
             <div class="btns mt-5 flex items-center gap-10">
-                <button class="py-[1.1875rem] px-[1.6875rem] rounded-md bg-[#F1A501] text-[#ffff] font-semibold">Find
+                <button class="py-[0.7rem] px-[0.9rem] md:py-[1.1875rem] md:px-[1.6875rem] rounded-md bg-[#F1A501] text-[#ffff] font-semibold">Find
                     out more</button>
                 <button class="flex items-center gap-3 text-[#686D77] font-medium">
-                    <div class="py-[1.1875rem] px-[1.1875rem] rounded-full bg-[#DF6951] inline-block "><img
+                    <div class="py-[0.8rem] px-[0.8rem] md:py-[1.1875rem] md:px-[1.1875rem] rounded-full bg-[#DF6951] inline-block "><img
                             src="images/Polygon 1.png" alt=""></div>Play Demo
                 </button>
             </div>
         </div>
         <div class="banner-right w-full">
-            <img src="images/Image.png" alt="">
+            <img src="images/Image.png" alt="" class="mt-5">
         </div>
     </div>
     <!-- banner area ends here  -->
@@ -86,13 +84,13 @@
     <!-- offer section   -->
 
     <div class="offers-section relative mb-16">
-        <img src="images/plus.png" alt="" class=" absolute right-16 top-0">
+        <img src="images/plus.png" alt="" class=" absolute right-16 top-0 hidden md:block">
         <div class="offer-head text-center mt-24 origin-right duration-1000">
             <h4 class="uppercase font-semibold text-xl text-[#5E6282] ease-in">CATEGORY</h4>
             <h2 class="text-[3.125rem] font-bold">We Offer Best Services</h2>
         </div>
     </div>
-    <div class="max-w-7xl m-auto flex items-center justify-between mb-10">
+    <div class=" flex flex-col   md:max-w-7xl md:m-auto md:mb-10 md:justify-between md:items-center md:flex-row">
         <div
             class="group bg-white relative col-4 text-center flex flex-col items-center p-8 cursor-pointer transition-all duration-700 hover:bg-white rounded-b-3xl hover:shadow-2xl ">
             <img src="images/offer-1.png" alt="" class="">
@@ -143,8 +141,8 @@
         </div>
     </div>
 
-    <div class="max-w-7xl m-auto flex items-center justify-center gap-12 mb-10 relative font-medium">
-        <img src="images/Decore (2).png" alt="" class="absolute -right-16 bottom-10 ">
+    <div class="gap-12 mb-10 relative font-medium flex flex-col px-5 md:flex-row items-center justify-center md:max-w-7xl md:m-auto ">
+        <img src="images/Decore (2).png" alt="" class="absolute -right-10 bottom-10 hidden md:block">
 
         <div class="top-card  relative w-full ">
             <img src="images/Rectangle 14.png" alt="" class="w-full ">
@@ -192,11 +190,11 @@
 
 
     <div class="booking-section mt-44 max-w-7xl m-auto">
-        <div class=" flex justify-center items-center mb-8">
-            <div class="booking-left basis-[65%]">
+        <div class=" flex flex-col justify-center items-center mb-8 md:flex-row">
+            <div class="booking-left w-full p-5 md:basis-[65%]">
                 <div class="booking-heading mb-6">
                     <h4 class=" font-semibold text-xl text-[#5E6282] mb-4">Easy and Fast</h4>
-                    <h2 class="text-[3.75rem] font-bold max-w-[611px] leading-tight">Book your next trip in 3 easy steps
+                    <h2 class="text-[1.75rem] md:text-[3.75rem] font-bold max-w-[611px] leading-tight">Book your next trip in 3 easy steps
                     </h2>
                 </div>
                 <div class="flex gap-4 items-start mb-10">
@@ -224,16 +222,16 @@
                     </div>
                 </div>
             </div>
-            <div class="booking-right basis-[35%]">
+            <div class="booking-right w-full md:basis-[35%]">
 
                 <div class="trip-card bg-white rounded-2xl p-6 relative w-full">
-                    <img src="images/Ellipse 8 (1).png" alt="" class="absolute -top-28 -right-28 -z-[1] blur-3xl">
+                    <img src="images/Ellipse 8 (1).png" alt="" class="absolute -top-28 -right-28 -z-[1] blur-3xl hidden md:block">
                     <img src="images/Rectangle 17.jpg" alt="" class="rounded-2xl w-full">
                     <h4 class="mt-4 font-medium text-[1.125rem] mb-3">Trip To Greece</h4>
                     <div class="date-name text-[#84829A] flex gap-2 relative">
                         <p class="border-r pr-2">14-29 June</p>
                         <p class="pl-4">by Robbin joseph</p>
-                        <div class="ongoing p-5 flex items-start gap-4 max-w-[270px] absolute -right-20 -top-2 w-full">
+                        <div class="ongoing p-1 md:p-5 flex items-start gap-4 max-w-[270px] absolute -top-32 right-0 md:-right-20 md:-top-2 w-full">
                             <img src="images/Mask Group.png" alt="">
                             <div class="on-text">
                                 <p>Ongoing</p>
@@ -268,15 +266,15 @@
     <!-- testimonial area  -->
 
     <div class="testimonial-section mt-52 mb-24 relative">
-        <div class="arrow absolute right-20 top-24 space-y-10">
+        <div class="arrow absolute right-20 top-24 space-y-10 hidden md:block">
             <img src="images/arrow-up-337-svgrepo-com.svg" alt="" class="w-4 h-4 ">
             <img src="images/down-arrow-svgrepo-com.svg" alt="" class="w-4 h-4">
         </div>
-        <div class="max-w-7xl m-auto flex gap-[10%]">
+        <div class="max-w-7xl m-auto flex flex-col md:gap-[10%] p-5 md:flex-row">
             <div class="left basis-2/4">
-                <div class="booking-heading mb-10">
+                <div class="booking-heading mb-10 text-center md:text-left">
                     <h4 class=" font-semibold text-xl text-[#5E6282] mb-4">Testimonials</h4>
-                    <h2 class="text-[3.75rem] font-bold max-w-[611px] leading-tight">What people say about Us.</h2>
+                    <h2 class="text-[1.75rem] md:text-[3.75rem] font-bold max-w-[611px] leading-tight">What people say about Us.</h2>
                 </div>
                 <div class="dots flex gap-4 mt-20">
                     <div class="round w-3 h-3 rounded-full bg-[#39425D]"></div>
@@ -286,7 +284,7 @@
             </div>
             <div class="right basis-2/4">
                 <div class="testimonial-text p-8 text-[#5E6282] max-w-[604px] relative">
-                    <img src="images/Image (1).png" alt="" class="absolute -left-8 -top-8">
+                    <img src="images/Image (1).png" alt="" class="md:absolute md:-left-8 md:-top-8">
                     <p class="mb-10 leading-8">“On the Windows talking painted pasture yet its express parties use. Sure
                         last upon he same as knew next. Of believed or diverted no.”</p>
                     <div class="name">
@@ -294,7 +292,7 @@
                         <p>Lahore, Pakistan</p>
                     </div>
                     <div
-                        class="back p-8 max-w-[600px] h-[236px] absolute bg-transparent w-full top-28 -right-10 -z-[1] flex flex-col justify-end">
+                        class="back p-8 max-w-[600px] h-[236px] absolute bg-transparent w-full top-52 right-0 md:top-28 md:-right-10 -z-[1] flex flex-col justify-end">
                         <div class="name">
                             <h4 class="font-bold">Chris Thomas</h4>
                             <p>CEO of Red Button</p>
@@ -303,7 +301,7 @@
                 </div>
             </div>
         </div>
-        <div class="max-w-7xl m-auto brands flex items-center justify-between mt-40">
+        <div class="max-w-7xl m-auto brands flex flex-col items-center justify-between mt-40 md:flex-row">
             <img src="images/Slice_1-removebg-preview.png" alt=""
                 class="brand-img p-10 transition-all duration-700 cursor-pointer">
             <img src="images/Slice_1__1_-removebg-preview.png" alt=""
@@ -317,14 +315,14 @@
 
     <!-- subscribe section  -->
 
-    <div class="subscribe-section max-w-7xl m-auto relative bg-[#F9F7FE] py-20 rounded-tl-[5rem] mb-16">
+    <div class="subscribe-section mx-5 md:max-w-7xl md:m-auto relative bg-[#F9F7FE] py-20 rounded-tl-[5rem] mb-16">
         <img src="images/Mask Group (2).png" alt="" class="absolute right-0 top-0">
         <img src="images/Mask Group (1).png" alt="" class="absolute left-0 top-0">
-        <img src="images/Group 77.png" alt="" class="absolute -top-5 -right-5 cursor-pointer">
-        <img src="images/Group 5.png" alt="" class="absolute -right-24 -bottom-16 -z-[1]">
-        <h4 class="text-center font-semibold text-[2.0625rem] text-[#5E6282] leading-snug tracking-wide">Subscribe to
+        <img src="images/Group 77.png" alt="" class="absolute -top-5 -right-5 cursor-pointer hidden md:block ">
+        <img src="images/Group 5.png" alt="" class="absolute -right-24 -bottom-16 -z-[1] hidden md:block">
+        <h4 class="text-center font-semibold text-[1.45rem] md:text-[2.0625rem] text-[#5E6282] leading-snug tracking-wide">Subscribe to
             get information, latest news and <br>other interesting offers about Cobham</h4>
-        <div class="input flex justify-center items-center gap-7 mt-12">
+        <div class="input flex flex-col justify-center items-center gap-7 mt-12 md:flex-row">
             <label class="relative">
 
                 <svg width="21" height="18" viewBox="0 0 21 18"
@@ -336,9 +334,9 @@
                 </svg>
 
                 <input type="email" name="email" id="email" placeholder="Your email"
-                    class="form-input  py-5 rounded-lg w-[422px]  px-4 bg-white placeholder-gray-400 text-gray-500 appearance-none block pl-14 focus:outline-none">
+                    class="form-input  py-5 rounded-lg md:w-[422px]  px-4 bg-white placeholder-gray-400 text-gray-500 appearance-none block pl-14 focus:outline-none">
             </label>
-            <button class="subs py-5 px-12 text-white ">Subscribe</button>
+            <button class="subs py-5 px-6 md:py-5 md:px-12 text-white ">Subscribe</button>
         </div>
 
     </div>
@@ -346,7 +344,7 @@
     <!-- footer area starts   -->
 
     <footer class="mt-40 mb-20">
-        <div class="max-w-6xl m-auto flex justify-between">
+        <div class="flex flex-col justify-center items-center md:max-w-6xl md:m-auto md:justify-between md:flex-row">
             <div class="col-5">
                 <img src="images/Jadoo..png" alt="">
                 <p class="max-w-[260px] mt-6">Book your trip in minute, get full Control for much longer.
