--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <div class="banner-left text-center p-3 md:text-left">
             <p class="text-[#DF6951] uppercase font-bold text-xs md:text-xl  md:mb-6">Best Destinations around the world </p>
             <h1
-                class="relative text-2xl -tracking-[-4%] text-[#181E4B] leading-[5.5625rem] md:mb-8 font-bold md:text-[5.25rem]  md:max-w-[595px] ">
+                class="relative text-2xl -tracking-[-4%] text-[#181E4B] leading-[2.5625rem] md:leading-[5.5625rem] md:mb-8 font-bold md:text-[5.25rem]  md:max-w-[595px] ">
                 Travel, enjoy and live a new and full life <img src="images/Decore-text.png" alt=""
-                    class="absolute w-28 top-14 right-40 md:w-96 md:top-[4.3125rem] -z-[1] md:right-[-5rem]">
+                    class="absolute w-28 top-8 right-52 md:w-96 md:top-[4.3125rem] -z-[1] md:right-[-5rem]">
             </h1>
             <p class="text-[#5E6282] ">Built Wicket longer admire do barton vanity itself do in it. Preferred to
                 sportsmen it engrossed
@@ -90,7 +90,7 @@
             <h2 class="text-[3.125rem] font-bold">We Offer Best Services</h2>
         </div>
     </div>
-    <div class=" flex flex-col   md:max-w-7xl md:m-auto md:mb-10 md:justify-between md:items-center md:flex-row">
+    <div class=" flex flex-col sm:gap-10 sm:mx-5 md:max-w-7xl md:m-auto md:mb-10 md:justify-between md:items-center md:flex-row">
         <div
             class="group bg-white relative col-4 text-center flex flex-col items-center p-8 cursor-pointer transition-all duration-700 hover:bg-white rounded-b-3xl hover:shadow-2xl ">
             <img src="images/offer-1.png" alt="" class="">
