--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h2 class="text-[3.125rem] font-bold">We Offer Best Services</h2>
         </div>
     </div>
-    <div class=" flex flex-col sm:gap-10 sm:mx-5 md:max-w-7xl md:m-auto md:mb-10 md:justify-between md:items-center md:flex-row">
+    <div class=" flex flex-col gap-10 mx-5 md:max-w-7xl md:m-auto md:mb-10 md:justify-between md:items-center md:flex-row">
         <div
             class="group bg-white relative col-4 text-center flex flex-col items-center p-8 cursor-pointer transition-all duration-700 hover:bg-white rounded-b-3xl hover:shadow-2xl ">
             <img src="images/offer-1.png" alt="" class="">
